--- a/xdyuan/src/main/resources/application.properties
+++ b/xdyuan/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tmall_ssm?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=xdyuan
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.mapper-locations=classpath:com/tmall/xdyuan/mapper/*.xml
+mybatis.type-aliases-package=com.tmall.xdyuan.pojo
+#时区设置
+spring.jackson.time-zone=GMT+8
+#返回时间格式
+#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+server.port=8082
+server.servlet.context-path=/tmall
+
+#32位的随机数
+#tmall.secret = ${random.value}
 
